# auditable-rf-stack

./: .gitignore  AUDITABLE_RF_COMMUNICATION_SYSTEM.md  Dockerfile  ECHTER_FUNKGERAET_LAUFEND.py  FINAL_AUDITABLE_RF_SYSTEM_SUMMARY.md  INTEGRATION_STATUS.md  LICENSE  README.md  REAL_HARDWARE_SETUP.md  REAL_RF_TRANSCEIVER_DOCUMENTATION.md  RF_TRANSCEIVER_INTEGRATION_GUIDE.md  SETUP_GUIDE.md  START_COMPLETE_RF_SYSTEM.bat  START_REAL_RF_TRANSCEIVER.bat  START_RF_BACKEND.bat  auditable_rf_ui.py  blueprint_rf_platform.py  cert_engine.py  certificate_master_rf_cert_29405237aab9.csv  certificate_master_rf_cert_29405237aab9.json  certificate_master_rf_cert_30f8bbb7f54f.csv  certificate_master_rf_cert_30f8bbb7f54f.json  docker-compose.yml  hardware_registry.py  index.html  info.html  package-lock.json  package.json  plugin_template.py  pyproject.toml  react_rf_control_suite.tsx  real_hardware_rf_system.py  real_rf_transceiver.py  requirements.txt  server_real_rf_system.py  signal_path_manager.py  start_rf_backend.sh  tailwind.config.js  test_rf_integration.py  tsconfig.json  (+4 more)
.github/workflows/: ci.yml
GOVERNANCE/: 01_CORE_CHARTER.md  02_GOVERNANCE_BOARD.md  03_MODULE_GOVERNANCE.md  04_CERTIFICATION_COUNCIL.md  05_COMMUNITY_STRUCTURE.md  06_FOUNDATION_STRUCTURE.md  README.md
PUBLIC_RELEASE/: CALL_TO_ACTION_REPORT.md  DISTRIBUTION_PACKAGE.md  README.md  TECHNICAL_IMPLEMENTATION_GUIDE.md
assets/: charts-59a3c365.js  charts-59a3c365.js.map  index-246f7476.js  index-246f7476.js.map  index-2e3fc8f8.css  motion-59a3c365.js  motion-59a3c365.js.map  ui-198de5fa.js  ui-198de5fa.js.map
installers/linux/: install.sh
installers/windows/: install.ps1
src/: App.tsx
tests/: test_rf_integration.py
